--- a/client/src/styles/profile.css
+++ b/client/src/styles/profile.css
@@ -1,6 +1,7 @@
+/* horiztonal tabs */
 .rwt__tablist:not([aria-orientation="vertical"]) 
 .rwt__tab[aria-selected="true"]:after {
-    border-bottom: 4px solid #26a146
+    border-bottom: 4px solid #26a146;
 }
 
 .rwt__tab:focus {
@@ -9,4 +10,16 @@
 
 .rwt__tab {
     color: #26a146;
+    text-align: center;
+}
+
+/* vertical tabs  */
+.rwt__tablist[aria-orientation="vertical"]
+.rwt__tab[aria-selected="true"]:after {
+    border-right: 4px solid #9dcc9c;
+}
+
+.rwt__tablist[aria-orientation="vertical"]
+.rwt__tab {
+    color: #4d4d4f;
 }
